# utl-inkext

./: .gitignore  README.rst  precommit  pyproject.toml  requirements-dev.txt
.github/workflows/: publish_pypi.yml  push_docs.yml
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt
docsrc/: conf.py  index.rst
src/inkext/: __init__.py  clipregion.py  css.py  geomsvg.py  inkext.py  inkstall.py  inksvg.py  install.py  svg.py
test/: conftest.py  test_haha.py  test_parse.py
tests/: conftest.py  test_parse.py  test_units.py
