[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utl-inkext"
version = "0.2.2"
authors = [{name = "Claude Zervas", email = "claude@utlco.com"}]
description = "Inkscape extension library"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "lxml",
    "tomli",
    "packaging",
    "typing_extensions",
    "utl-geom2d",
]

[project.optional-dependencies]
test = ["pytest"]
dev = [
    "pytest",
    "black",
    "ruff",
    "pylint",
    "mypy",
    "lxml-stubs",
    "sphinx",
    #"utl-sphinx-theme@https://github.com/utlco/utl-sphinx-theme/archive/refs/heads/main.zip",
    "utl-sphinx-theme",
]

[project.scripts]
inkstall = "inkext.inkstall:main"

[tool.pytest.ini_options]
minversion="6.0"
addopts = "-ra -q -s"
testpaths = ["test",]

[tool.black]
line-length = 80
target-version = ["py39"]
skip-string-normalization = true
preview = true

[tool.pylint.MAIN]
extension-pkg-allow-list = ["lxml.etree"]

[tool.pylint."MESSAGES CONTROL"]
ignore = "contrib"
disable = [
    "too-many-locals",
    "too-many-lines",
    "missing-function-docstring",
    "consider-using-enumerate",
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-boolean-expressions",
    "fixme"
]

[tool.pylint.VARIABLES]
variable-rgx = "^_?[a-z][a-z0-9_]*$"
attr-rgx = "^_{0,2}[a-z][a-z0-9_]*$"
argument-rgx = "^_?[a-z][a-z0-9_]*$"
method-rgx = "(?x)^(?:(?P<exempt>_[a-z0-9_]+__|(test|assert)_*[A-Z0-9][a-zA-Z0-9_]*|next)|(?P<snake_case>_{0,2}[a-z][a-z0-9_]*))$"

[tool.ruff]
line-length = 80
target-version = "py39"
preview = true
output-format = "concise"
extend-exclude = [
    "venv",
    "contrib",
    "tmp",
    "saved",
    "unused",
    "docs",
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",
    "B",
    "D",
    "E",
    "F",
    "G",
    "I",
    "Q",
    "W",
    "N",
    # "S",
    "ANN",
    "AIR",
    "ARG",
    "BLE",
    # "FBT",
    "C4",
    # "C90",
    "COM",
    "DTZ",
    # "EM",
    # "ERA",
    "FA",
    # "FIX",
    "FLY",
    "FURB",
    "ICN",
    "INP",
    "INT",
    "ISC",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "NPY",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "T20",
    # "TD",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
extend-ignore = [
    "ANN101", # self annotated... good grief
    "COM812", # trailing comma missing
    # "D107", # Missing docstring in `__init__`
    "E203", # Flake8 bug re : spacing
    "PLR2004", # Magic value used
    "PLR0904", # too many methods
    "PLR0917", # too many positional arguments
    "PLR0913", # Too many arguments to function call (6 > 5)
    "PLR6301", # method could be a function
    "TRY003", # long msg outside exc cls
    "TRY400", # Use `logging.exception` instead of `logging.error`
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D107"]
"install.py" = ["T201", "ANN401"]
"svg.py" = ["PLR0914"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.mypy]
mypy_path = "./src"
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
exclude = [
    "contrib",
    "tmp",
    "saved",
    "unused",
    "build",
    "docs",
]

#[[tool.mypy.overrides]]
#module = ""
#follow_imports = "skip"


[tool.typos]

[tool.typos.files]
extend-exclude = [
    "venv",
    "__pycache__",
    "saved",
    "build",
    "unused",
    "test",
    "contrib",
    "tmp",
    "out"
]

